--- a/style.css
+++ b/style.css
@@ -21,10 +21,22 @@ body{
 
 .wrapper{
     background-color: #118a7e;
-    padding: 35px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 2px 2px 50px 2px rgba(0,0,0, 0.4);
+    transition: transform 0.3s;
 }
 
-.wrapper .display-container {
+.wrapper:hover{
+    transform: scale(1.05);
+}
+.wrapper h1{
+    font-size: 24px;
+    text-align: center;
+}
+
+.display-container {
    background-color:  #1f6f78;
    padding:  5px;
    margin: 10px 0;
@@ -35,4 +47,41 @@ body{
 .display-container span {
     padding: 8px 12px;
     background-color: #93e4c1;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.display-container span:hover{
+    background-color: #93e4c1a1;
+}
+
+.option{
+    margin: 10px 0;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.generate-password {
+    font-size: 16px;
+    padding: 8px 15px;
+    color: #1f6f78;
+    background-color: #93e4c1;
+    outline: none;
+    border: none;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.generate-password:hover{
+    background-color: #93e4c1b2;
+}
+
+#length{
+    width: 18%;
+}
+
+input[type='checkbox']{
+width: 20px;
+cursor: pointer;
 }
