--- a/style.css
+++ b/style.css
@@ -85,3 +85,24 @@ input[type='checkbox']{
 width: 20px;
 cursor: pointer;
 }
+
+.pass-indicator {
+    position: relative;
+    width: 100%;
+    height: 5px;
+    background-color: grey;
+}
+
+.progressBar {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 25%;
+    height: 5px;
+    /* background-color: yellow; */
+    transition: 0.3s;
+}
+
+
+
